# MillaAI

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  chat-cli.sh  main.py  pyproject.toml  run-app.sh
alembic/: env.py  script.py.mako
alembic/versions/: 1c09ed14a98b_add_pgvector_support.py  202409201630_create_users_table.py  690dd9d45922_add_vector_extension.py  85281dfc44a9_create_chat_tables.py  8ac6cb41090a_add_goals_tasks_mental_states_tables.py  8c01ec45a490_create_tables.py  90e97ff8114e_create_users_table.py  9dfaab78408c_create_tables.py  c5d191f30472_remove_llm_tool_role_from_messagerole_.py
cli/: __init__.py  chat.py
docker/: docker-compose.yml
docs/: README.md  api_error_handling.md  architecture.md  db_schema.md  dev_commands.md  dev_rules.md  memory_pipeline.md  tasks.md
docs/api/: README.md  api_admin.md  api_auth.md  api_chat_websocket.md  api_chats.md  api_goals.md  api_users.md
docs/architecture/: architecture.md  cache_pipeline.md  database_refactoring.md  goals_graph.md
docs/guides/: dev_commands.md
docs/planning/: tasks.md
docs/reference/: db_schema.md
scripts/: generate_tokens.py
src/aimi/api/: app.py  deps.py  exceptions.py
src/aimi/api/routers/: __init__.py  chat.py  health.py
src/aimi/api/schemas/: __init__.py  chat.py  health.py  response.py
src/aimi/core/: config.py  errors.py  logging.py  redis.py  security.py
src/aimi/db/: __init__.py  base.py  session.py  uow.py
src/aimi/llm/: client.py  openai.py  prompts.py  system_prompt.py  tools.py
src/aimi/repositories/: __init__.py  chats.py  devices.py  events.py  goals.py  mental_state.py  mental_states.py  messages.py  notifications.py  users.py
src/aimi/services/: auth.py  chat.py  connection_manager.py  conversation.py  deps.py  notification.py
src/aimi/workers/: reminders.py  summary.py
src/tests/: conftest.py
(+43 files in other folders)
